--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "ipykernel>=7.0.1",
     "kagglehub>=0.3.13",
     "matplotlib>=3.10.7",
+    "mlflow>=3.5.1",
     "pandas>=2.3.3",
     "pillow>=12.0.0",
     "pyarrow>=21.0.0",
