--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=7.0.1",
+    "ipywidgets>=8.1.8",
     "kagglehub>=0.3.13",
     "keras>=3.12.0",
     "matplotlib>=3.10.7",
@@ -14,5 +15,5 @@ dependencies = [
     "pillow>=12.0.0",
     "pyarrow>=21.0.0",
     "seaborn>=0.13.2",
-    "tensorflow>=2.20.0",
+    "tensorflow-macos>=2.16.2",
 ]
