--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "keras>=3.12.0",
     "matplotlib>=3.10.7",
     "mlflow>=3.5.1",
+    "opencv-python>=4.11.0.86",
     "pandas>=2.3.3",
     "pillow>=12.0.0",
     "pyarrow>=21.0.0",
